🎨 style: apply Naver HackDay Convention
- IntellJ에 NaverConvention 적용시킴에 따라, 미적용 되어있던 파일 Order 순서 변경되었습니다.
- JavaDoc 추가까지 같이 업로드

Change-Id: Idd059734233d47d7e2cc3cd0df80efc448c8953f